# hypnettorch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg
docs/: README.md
docs/source/: conf.py  data.rst  examples.rst  hnets.rst  hpsearch.rst  index.rst  mnets.rst  special.rst  timeseries.rst  tutorials.rst  utils.rst
hypnettorch/data/: README.rst  __init__.py  celeba_data.py  cifar100_data.py  cifar10_data.py  cub_200_2011_data.py  dataset.py  fashion_mnist.py  ilsvrc2012_data.py  large_img_dataset.py  mnist_data.py  sequential_dataset.py  svhn_data.py  udacity_ch2.py
hypnettorch/hnets/: TODO.md  __init__.py  chunked_deconv_hnet.py  chunked_mlp_hnet.py  deconv_hnet.py  hnet_container.py  hnet_helpers.py  hnet_interface.py  hnet_perturbation_wrapper.py  mlp_hnet.py  structured_hmlp_examples.py  structured_mlp_hnet.py
hypnettorch/hpsearch/: README.rst  TODO.md  gather_random_seeds.py  hpsearch.py  hpsearch_config_template.py  hpsearch_postprocessing.py
hypnettorch/mnets/: TODO.md  __init__.py  bi_rnn.py  bio_conv_net.py  chunk_squeezer.py  classifier_interface.py  lenet.py  mlp.py  mnet_interface.py  resnet.py  resnet_imgnet.py  simple_rnn.py  wide_resnet.py  zenkenet.py
hypnettorch/tutorials/: .gitignore  README.rst  getting_started.ipynb  hmc_example.ipynb  smartly_chunked_resnet.ipynb  wrn_chunking_strategies.ipynb
hypnettorch/utils/: batchnorm_layer.py  cli_args.py  context_mod_layer.py  ewc_regularizer.py  gan_helpers.py  hmc.py  hnet_regularizer.py  local_conv2d_layer.py  logger_config.py  misc.py  optim_step.py  sim_utils.py  (+4 more)
(+26 files in other folders)
