[metadata]
name = hypnettorch
version = 0.0.2
author = Christian Henning, Maria R. Cervera
author_email = henningc@ethz.ch
description = Hypernetwork library for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ee.ethz.ch/henningc/hypnettorch
project_urls =
    Bug Tracker = https://github.com/chrhenning/hypnettorch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html
